# python-project-template

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  .prospector.yaml  CONTRIBUTING.md  LICENSE  README.md  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/modules/: modules.doctree  source.doctree
.github/: dependabot.yml
.github/workflows/: cd.yml  changelog_template.jinja2  ci.yml  versioning.yml
_sources/: changelog.rst.txt
_sources/modules/: source.rst.txt
docker/: Dockerfile  docker-compose.yaml  down.sh  entrypoint.sh  env.sh  lint.sh  run.sh
docs/: conf.py  contributing.rst  index.rst
modules/: modules.html  source.html
requirements/: dev.txt
scripts/: docky.py  versioning.py
scripts/cly/: __init__.py  colors.py  colors.pyi  config.py  config.pyi  docstring.py  docstring.pyi  testing.py  utils.py  utils.pyi
scripts/dev_cli/: __init__.py  __main__.py  config.py
scripts/dev_cli/commands/: __init__.py  doc.py  format_code.py  lint.py  requirements.py  scan.py
scripts/docky_cli/: __init__.py  __main__.py  config.py  errors.py
scripts/docky_cli/commands/: __init__.py  down.py  env_file.py  lint.py  list_docker_objects.py  run.py  scan.py  up.py
source/: __init__.py
tests/: .prospector.yaml  __init__.py  test_version.py
tests/source/: __init__.py
