[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Template for a Python project."
authors = ["Mateus Oliveira"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
editorconfig-checker = "^2.4.0"
isort = "^5.10.1"
mypy = "^0.961"
pre-commit = "^2.19.0"
prospector = "^1.7.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
safety = "^1.10.3"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
toml = "^0.10.2"
types-toml = "^0.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "error"
addopts = [
    "-vv",
    "-s",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage-results/htmlcov",
    "--cov=source",
    "--cov-fail-under=100",
]

[tool.mypy]
python_version = "3.7"
strict = true
show_error_codes = true

[tool.isort]
profile = "black"
line_length = 79
verbose = true
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.black]
line-length = 79
verbose = true
